--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,20 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    ext {
+        compose_compiler = '1.3.1'     //compiler
+        compose_version = '1.2.0'      //stable compose dependencies
+        compose_alpha = '1.3.0-alpha01' //alpha releases
+    }
+    repositories {
+        google()
+        jcenter()
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath "com.android.tools.build:gradle:7.2.2"
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.43.2'
+    }
+}// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.2.2' apply false
     id 'com.android.library' version '7.2.2' apply false
