--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -85,6 +85,8 @@ dependencies {
     implementation "com.google.accompanist:accompanist-pager:0.25.0" // Pager
     implementation "com.google.accompanist:accompanist-pager-indicators:0.25.0" // Pager Indicators
 
+    implementation "com.github.skydoves:colorpicker-compose:1.0.0"
+
 }
 
 kapt {
