--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -75,17 +75,14 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation group: 'org.jetbrains.kotlinx', name: 'kotlinx-coroutines-jdk8', version: '1.6.1'
-
-    //core
-
-    implementation 'com.github.kittinunf.fuel:fuel:2.3.1'
-    implementation 'com.github.kittinunf.fuel:fuel-coroutines:2.3.1'
-    implementation 'com.github.kittinunf.fuel:fuel-android:2.3.1'
-
+    implementation("com.squareup.okhttp3:okhttp:4.10.0")
     implementation "com.google.accompanist:accompanist-pager:0.25.0" // Pager
     implementation "com.google.accompanist:accompanist-pager-indicators:0.25.0" // Pager Indicators
 
-    implementation "com.github.skydoves:colorpicker-compose:1.0.0"
+    implementation 'com.godaddy.android.colorpicker:compose-color-picker:0.5.1'
+
+// with Android ColorInt extensions
+    implementation 'com.godaddy.android.colorpicker:compose-color-picker-android:0.5.1'
 
 }
 
