--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
 
     implementation 'com.google.dagger:hilt-android:2.43.2'
     kapt 'com.google.dagger:hilt-compiler:2.43.2'
@@ -83,7 +84,6 @@ dependencies {
 
 // with Android ColorInt extensions
     implementation 'com.godaddy.android.colorpicker:compose-color-picker-android:0.5.1'
-
 }
 
 kapt {
